<resources>
    <string name="app_name">New Debts</string>
    <string name="login_title">Вход</string>
    <string name="email_hint">Email</string>
    <string name="email_helper_text">Введите email</string>
    <string name="password_hint">Пароль</string>
    <string name="button_login_text">Войти</string>
    <string name="no_acc_text">Нет аккаунта?</string>
    <string name="registration_text">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="registration_title">Регистрация</string>
    <string name="next_button">Далее</string>
    <string name="acc_text">Есть аккаунт?</string>
    <string name="login_text">ВОЙТИ</string>
    <string name="registration_button_text">Зарегистрироваться</string>
    <string name="main_page_title">Главная</string>
    <string name="fiends_page_title">Друзья</string>
    <string name="history_page_title">История</string>
    <string name="settings_page_title">Настройки</string>
    <string name="main_title">DEBTS</string>
    <string name="hello_text">Здравстуйте, %1$s.</string>
</resources>