<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_page"
        android:enabled="true"
        android:icon="@drawable/ic_home_20"
        android:title="@string/main_page_title" />
    <item
        android:id="@+id/friends_page"
        android:enabled="true"
        android:icon="@drawable/ic_people_20"
        android:title="@string/fiends_page_title" />
    <item
        android:id="@+id/history_page"
        android:enabled="true"
        android:icon="@drawable/ic_history_20"
        android:title="@string/history_page_title" />
    <item
        android:id="@+id/settings_page"
        android:enabled="true"
        android:icon="@drawable/ic_settings_20"
        android:title="@string/settings_page_title" />
</menu>